    <BLANKLINE>


    >>> mail_queue[:] = []

Now let's upload a couple of files:

    >>> res = app.post("/login",
    ...                params={'login': 'admin@ututi.lt', 'password': 'asdasd'})

    >>> res = app.post("/subject/vu/mat_analize/upload_file",
    ...                params={'folder': ''},
    ...                upload_files=[("attachment", "f1.txt", "Test")])

    >>> res = app.post("/subject/vu/mat_analize/upload_file",
    ...                params={'folder': ''},
    ...                upload_files=[("attachment", "f2.txt", "Test")])

    >>> browser.open('http://localhost/subject/vu/mat_analize')
    >>> browser.getControl(name='folder').value = 'A folder'
    >>> browser.getControl('create').click()

    >>> setEventTime(datetime.datetime(2009, 10, 9, 10, 15))
    >>> browser.open('http://localhost/news/daily?date=2009-10-10')

    >>> printEmails()
    ['admin@ututi.lt']
    Ututi news: 2 new pages
    <BLANKLINE>
    Matematinė analizė
    <BLANKLINE>
    - Page How to be awesome! (http://localhost/subject/vu/mat_analize/page/3) was created.
    - Page How to be more awesome! (http://localhost/subject/vu/mat_analize/page/5) was created.
    <BLANKLINE>
    If you want to stop getting these emails - you can change your subscription settings in your watched subject page (http://localhost/profile/subjects).
    <BLANKLINE>
    ['user2@ututi.lt']
    Ututi news: 2 new files and 2 new pages
    <BLANKLINE>
    Matematinė analizė
    <BLANKLINE>
    - Page How to be more awesome! (http://localhost/subject/vu/mat_analize/page/5) was created.
    - Page How to be awesome! (http://localhost/subject/vu/mat_analize/page/3) was updated.
    - File f1.txt (http://localhost/subject/vu/mat_analize/file/9/get) was uploaded.
    - File f2.txt (http://localhost/subject/vu/mat_analize/file/10/get) was uploaded.
    <BLANKLINE>